<resources>
    <string name="app_name">Calculator</string>
    <string name="equals">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mul">x</string>
    <string name="div">/</string>
    <string name="mem1">M1</string>
    <string name="mem2">M2</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="coma">,</string>
    <string name="C">C</string>
    <string name="CE">CE</string>
    <string name="AC">AC</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="basicCalculator">Basic Calculator</string>
    <string name="advancedCalculator">Advanced Calculator</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="square">x^2</string>
    <string name="squarey">x^y</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="pro">%</string>
    <string name="sqrt">sqrt</string>
    <string name="bracketsOpen">(</string>
    <string name="bracketsClose">)</string>

    <string name="aboutContent">Calculator Mobile Application\nCreated by Maciej Czajkowski
    as an excercise.\nApplication can handle both basic and advanced calculations</string>
</resources>